Much improved Fiji builds