@@ -1,4 +1,5 @@
 import io.github.qupath.gradle.PlatformPlugin
+import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
     id("qupath.common-conventions")
@@ -6,6 +7,10 @@ plugins {
     id("qupath.git-commit-id")
 
     id("qupath.djl-conventions")
+    id("qupath.application-conventions")
+
+    id("qupath.fiji-conventions")
+
     id("qupath.jpackage-conventions")
     id("qupath.license-conventions")
 
@@ -24,11 +29,9 @@ if ("32" == System.getProperty("sun.arch.data.model")) {
 }
 
 /*
- * Apply plugin to build with Fiji dependencies, if needed
+ * Set by Fiji conventions plugin
  */
-if (buildWithFiji()) {
-    apply(plugin="qupath.fiji-conventions")
-}
+val buildWithFiji: Boolean by project.extra
 
 /*
  * Get the current QuPath version
@@ -139,7 +142,7 @@ val includedProjects = rootProject.subprojects.filter { !excludedProjects.contai
 dependencies {
 
     // Include Groovy scripting
-    if (!buildWithFiji())
+    if (!buildWithFiji)
         runtimeOnly(libs.bundles.groovy3)
 
     includedProjects.forEach {
@@ -161,24 +164,6 @@ dependencies {
     }
 }
 
-application {
-    mainClass = "qupath.QuPath"
-
-    val qupathAppName = gradle.extra["qupath.app.name"] as String
-
-    applicationName = qupathAppName
-    applicationDefaultJvmArgs += listOf(gradle.extra["qupath.jvm.args"] as String)
-
-    // Necessary when using ./gradlew run to support style manager to change themes
-    applicationDefaultJvmArgs += "--add-opens"
-    applicationDefaultJvmArgs += "javafx.graphics/com.sun.javafx.css=ALL-UNNAMED"
-
-    // Necessary when using ./gradlew run to support project metadata autocomplete
-    // See https://github.com/controlsfx/controlsfx/issues/1505
-    applicationDefaultJvmArgs += "--add-opens"
-    applicationDefaultJvmArgs += "javafx.base/com.sun.javafx.event=ALL-UNNAMED"
-
-}
 
 
 /**
@@ -288,9 +273,60 @@ distributions {
     }
 }
 
-/**
- * Check if we should build with Fiji dependencies
+
+
+/*
+ * Custom behavior when we want to build with all Fiji dependencies
  */
-fun buildWithFiji(): Boolean {
-    return providers.gradleProperty("fiji").orNull == "true"
+if (buildWithFiji) {
+
+    apply(plugin="qupath.fiji-conventions")
+
+    // Set dependencies here (rather than in plugin) so we can use the SciJava version catalog
+    dependencies {
+        implementation(sciJava.bundles.fiji)
+        {
+            // Excluded because gradle doesn't support maven profiles fully - so need to get them some other way
+            exclude(group = "org.jogamp.gluegen")
+            exclude(group = "org.jogamp.jogl")
+            exclude(group = "org.jogamp.joal")
+            exclude(group = "org.bytedeco", module = "ffmpeg")
+        }
+        implementation(sciJava.org.jogamp.gluegen.gluegenRt)
+        implementation(sciJava.org.jogamp.jogl.joglAll)
+        implementation(sciJava.org.bytedeco.ffmpeg)
+        implementation("org.bytedeco:ffmpeg-platform:${sciJava.org.bytedeco.ffmpeg.get().version}")
+
+        val classifier = getJogampClassifier()
+        if (classifier != null) {
+            implementation("org.jogamp.gluegen:gluegen-rt:${sciJava.org.jogamp.gluegen.gluegenRt.get().version}:natives-macosx-universal")
+            implementation("org.jogamp.jogl:jogl-all:${sciJava.org.jogamp.jogl.joglAll.get().version}:natives-macosx-universal")
+            implementation("org.jogamp.joal:joal:${sciJava.org.jogamp.joal.joal.get().version}:natives-macosx-universal")
+        } else {
+            logger.warn("Native libraries not found for jogamp")
+        }
+    }
+
+    // Required for SciJava Context
+    runtime {
+        modules.add("java.instrument")
+    }
+
+}
+
+fun getJogampClassifier(): String? {
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        return "natives-macosx-universal"
+    }
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        return "natives-windows-amd64"
+    }
+    if (Os.isFamily(Os.FAMILY_UNIX)) {
+        return if (Os.isArch("arm64")) {
+            "natives-linux-aarch64"
+        } else {
+            "natives-linux-amd64"
+        }
+    }
+    return null
 }
